# CS410-Tech-Review

./: .gitattributes  .gitignore  README.md  pyproject.toml  train.ipynb
cache/: test_tokenized.joblib  train_tokenized.joblib  val_tokenized.joblib  word2vec_model.gensim  word2vec_model.gensim.syn1neg.npy  word2vec_model.gensim.wv.vectors.npy
data/: yelp-2015.json
logs/: console_run.txt  console_run_neat.txt
scripts/: graph1.py  graph2.py
src/: clean.py  dataset.py  models.py  train.py
src/cs410_han/: __init__.py  __main__.py  config.py  data.py  evaluate.py  logger.py  model.py  train.py
