[project]
name = "cs410-tech-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "mypy>=1.15.0",
    "nltk>=3.9.1",
    "numpy>=2.2.2",
    "pandas-stubs>=2.2.3.241126",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.4",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.5",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
