[project]
name = "cs410-han"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David", email = "70505457+davliang@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = [
    "gensim>=4.3.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=80.3.1",
    "spacy[cuda12x]>=3.8.5",
    "torch>=2.6.0",
    "wheel>=0.45.1",
]

[project.scripts]
cs410-han = "cs410_han:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
